Agregadas tablas y opciones de crear una nueva entrada en la vista de usuarios y asignaturas

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
@@ -7,9 +7,9 @@
         <div id="menu">
             <nav>
                 <ul class="primer_tab">
-                    <li><a href="/_login">Universidad</a></li>
-                    <li><a href="/_asignaturas">Asignaturas</a></li>
-                    <li><a href="/editar">Usuarios</a></li>
+                    <li><a href="/login">Universidad</a></li>
+                    <li><a href="/asignaturas">Asignaturas</a></li>
+                    <li><a href="/usuarios">Usuarios</a></li>
                 </ul>
             </nav>
         </div>
@@ -22,9 +22,7 @@ body {
 
      
   a {
-    text-decoration: none;
-    color: #fff;
-    display: block;
+
   }
   
   ul {
@@ -34,7 +32,7 @@ body {
     text-transform: uppercase;
   }
   
-  li {
+  ul.primer_tab li {
     float: left;
   }
   
@@ -62,6 +60,9 @@ body {
     display: block;
     padding: 20px 30px;
     border-right: 1px solid rgb(145, 21, 21);
+    text-decoration: none;
+    color: #fff;
+
   }
   
   ul.primer_tab li:last-child a {
