Vista editar usuarios, modelos usuarios y asignaturas

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -29,11 +29,8 @@
                         <option>Alumno</option>
                         </select>
                     </div>
-                    
-                    <button class="btn btn-primary" type="submit">
-                    Añadir
-                    </button>
-                </form>
+                    <button class="btn btn-primary" type="submit">Añadir</button>
+                  </form>
                 </div>
             </div>
             </div>
