Funciona boton eliminar

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
@@ -48,7 +48,7 @@
                 <td><%= asignaturas[i].description%></td>
                 <td><%= asignaturas[i].info_instalacion%></td>
                 <td>
-                  <a href="/delete/<%= asignaturas[i]._id %>" class="btn btn-danger">Delete</a>
+                  <a href="/asignaturas/delete/<%= asignaturas[i]._id %>" class="btn btn-danger">Delete</a>
                   <a href="" class="btn btn-secondary">Edit</a>
                 </td>
               </tr>
