--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -50,13 +50,13 @@
             </tr>
           </thead>
           <tbody>
-            <% for(var i=0; i < user.length; i++) { %>
+            <% for(var i=0; i < usuarios.length; i++) { %>
               <tr>
                 <td><%= i + 1%></td>
-                <td><%= user[i].nombre%></td>
-                <td><%= user[i].apellidos%></td>
-                <td><%= user[i].correo%></td>
-                <td><%= user[i].rol%></td>
+                <td><%= usuarios[i].nombre%></td>
+                <td><%= usuarios[i].apellidos%></td>
+                <td><%= usuarios[i].correo%></td>
+                <td><%= usuarios[i].rol%></td>
                 <td>
                   <a href="" class="btn btn-danger">Delete</a>
                   <a href="" class="btn btn-secondary">Edit</a>
