--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
@@ -49,7 +49,7 @@
                 <td><%= asignaturas[i].info_instalacion%></td>
                 <td>
                   <a href="/asignaturas/delete/<%= asignaturas[i]._id %>" class="btn btn-danger">Delete</a>
-                  <a href="" class="btn btn-secondary">Edit</a>
+                  <a href="/asignaturas/editar_asignaturas/<%= asignaturas[i]._id %>" class="btn btn-secondary">Edit</a>
                 </td>
               </tr>
             <% } %>
