--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -75,7 +75,7 @@
                 <% } %>
                 </td>
                 <td>
-                  <a href="" class="btn btn-danger">Delete</a>
+                  <a href="/usuarios/delete/<%= usuarios[i]._id %>" class="btn btn-danger">Delete</a>
                   <a href="" class="btn btn-secondary">Edit</a>
                 </td>
               </tr>
