--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
@@ -1,20 +1,24 @@
+<% include partials/_header %>
+<head>
+  <meta charset="utf-8">
+  <title>Editar usuarios</title>
+  <!-- BOOTSTRAP CDN -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+</head>
 <div class="container">
     <div class="row">
         <div class="col-md-10">
             <div class="card">
                 <div class="card-body">
-                    <form action="/usuarios/add" method="post">
+                    <form action="/usuarios/editar_usuarios/<%= usuarios._id %>" method="post">
                         <div class="form-group">
-                            <input class="form-control" type="text" name="nombre" placeholder="Nombre">
+                            <input class="form-control" type="text" name="nombre" placeholder="Nombre" value="<%= usuarios.nombre %>">
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" name="apellidos" placeholder="Apellidos">
+                            <input class="form-control" type="text" name="apellidos" placeholder="Apellidos" value="<%= usuarios.apellidos %>">
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" name="correo" placeholder="Correo">
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="password" placeholder="Contraseña">
+                            <input class="form-control" type="text" name="correo" placeholder="Correo" value="<%= usuarios.correo %>">
                         </div>
                         <div>
                             <select name="rol">
