--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
@@ -7,7 +7,7 @@
         <div id="menu">
             <nav>
                 <ul class="primer_tab">
-                    <li><a href="/login">Universidad</a></li>
+                    <li><a href="/">Universidad</a></li>
                     <li><a href="/asignaturas">Asignaturas</a></li>
                     <li><a href="/usuarios">Usuarios</a></li>
                 </ul>
