--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 </head>
 <div class="container">
+  <%if(user.rol == "Administrador"){%>
   <div class="row">
     <div class="col-md-10">
       <div class="card">
@@ -29,6 +30,7 @@
         </div>
       </div>
     </div>
+    <% } %>
     
       <div class="col-md-10">
         <table class="table table-bordered table-hover">
@@ -38,19 +40,29 @@
               <th>Nombre</th>
               <th>Description</th>
               <th>Info de instalación</th>
+              <%if(user.rol == "Administrador" || user.rol == "Profesor"){%>
+              <th>Opciones</th>
+              <% } %>
             </tr>
           </thead>
           <tbody>
             <% for(var i=0; i < asignaturas.length; i++) { %>
+              <%for (var j=0; j < user.asignaturas.length;j++){%>
+                <%if(asignaturas[i]._id.toString()==user.asignaturas[j].toString() || user.rol == "Administrador"){%>              
               <tr>
-                <td><%= i + 1%></td>
+                <td><%= j + 1%></td>
                 <td><%= asignaturas[i].title%></td>
                 <td><%= asignaturas[i].description%></td>
                 <td><%= asignaturas[i].info_instalacion%></td>
+
+                <%if(user.rol == "Administrador" || user.rol == "Profesor"){%>
                 <td>
                   <a href="/asignaturas/delete/<%= asignaturas[i]._id %>" class="btn btn-danger">Delete</a>
                   <a href="/asignaturas/editar_asignaturas/<%= asignaturas[i]._id %>" class="btn btn-secondary">Edit</a>
                 </td>
+                <% } %>
+                <% } %>
+                <% } %>
               </tr>
             <% } %>
           </tbody>
