--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
@@ -7,12 +7,15 @@
         <div id="menu">
             <nav>
                 <ul class="primer_tab">
+                  <%if(!(user)){%>
                     <li><a href="/">Universidad</a></li>
+                    <%}%>
                     <%if(user){%>
                     <li><a href="/asignaturas">Asignaturas</a></li>
                       <%if(user.rol == "Administrador"){%>
                       <li><a href="/usuarios">Usuarios</a></li>
-                      <%}%>
+                      <%}%> 
+                    <li><a href="/logout">Cerrar sesion</a></li>
                     <%}%>
                 </ul>
             </nav>
