--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
@@ -29,8 +29,6 @@
           </form>
         </div>
       </div>
-      <br>
-      <br>
     </div>
     <% } %>
     
@@ -52,8 +50,10 @@
               <%for (var j=0; j < user.asignaturas.length;j++){%>
                 <%if(asignaturas[i]._id.toString()==user.asignaturas[j].toString() || user.rol == "Administrador"){%>              
               <tr>
-                <td href="/software"><%= j + 1%></td>
-                <td><%= asignaturas[i].title%></td>
+                <td ><%= j + 1%></td>
+                <td>
+                <a href="/software/<%= asignaturas[i]._id %>"><%= asignaturas[i].title%></a>
+              </td>
                 <td><%= asignaturas[i].description%></td>
                 <td><%= asignaturas[i].info_instalacion%></td>
 
