--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/software.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/software.ejs
@@ -7,6 +7,28 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
     integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 </head>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10">
+      <div class="card">
+        <div class="card-body">
+          <form action="" method="post">
+            <div class="form-group">
+              <input class="form-control" name="description" cols="80"
+                placeholder="Escribe la descripción del software">
+            </div>
+            <div class="form-group">
+              <input class="form-control" name="url" cols="80"
+                placeholder="Escribe la url"></textarea>
+            </div>
+            <button class="btn btn-primary" type="submit">Añadir</button>
+          </form>
+        </div>
+      </div>
+      <br>
+      <br>
+    </div>
+  </div>
 
 <div class="col-md-15">
   <table class="table table-bordered table-hover">
@@ -17,7 +39,12 @@
       </tr>
     </thead>
     <tbody>
-
+      <% for(var i=0; i < software.length; i++) { %>
+        <%if(asignaturas._id.toString()==software.asignaturas.toString()){%>              
+            <td><%= i + 1%></td>
+            <td><%=software[i].url%></td>
+        <% } %>
+    <% } %>  
     </tbody>
   </table>
 </div>
