--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
@@ -48,11 +48,12 @@
             </tr>
           </thead>
           <tbody>
+            <% var p = 1; %>
             <% for(var i=0; i < asignaturas.length; i++) { %>
               <%for (var j=0; j < user.asignaturas.length;j++){%>
-                <%if(asignaturas[i]._id.toString()==user.asignaturas[j].toString() || user.rol == "Administrador"){%>              
+                <%if(asignaturas[i]._id.toString()==user.asignaturas[j].toString() || user.rol == "Administrador"){ %>           
               <tr>
-                <td href="/software"><%= j + 1%></td>
+                <td href="/software"><%= p++ %></td>
                 <td><%= asignaturas[i].title%></td>
                 <td><%= asignaturas[i].description%></td>
                 <td><%= asignaturas[i].info_instalacion%></td>
