--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
@@ -48,11 +48,12 @@
             </tr>
           </thead>
           <tbody>
+            <% var p = 1; %>
             <% for(var i=0; i < asignaturas.length; i++) { %>
               <%for (var j=0; j < user.asignaturas.length;j++){%>
                 <%if(asignaturas[i]._id.toString()==user.asignaturas[j].toString() || user.rol == "Administrador"){%>              
               <tr>
-                <td ><%= j + 1%></td>
+                <td ><%= p++ %></td>
                 <td>
                 <a href="/software/<%= asignaturas[i]._id %>"><%= asignaturas[i].title%></a>
               </td>
