--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
@@ -62,7 +62,8 @@
 
                 <%if(user.rol == "Administrador" || user.rol == "Profesor"){%>
                 <td>
-                  <a href="/asignaturas/delete/<%= asignaturas[i]._id %>" class="btn btn-danger">Delete</a>
+                  <% var ruta = asignaturas[i]._id.toString %>
+                  <a id="eliminar" onclick="pop_up()" class="btn btn-danger" >Delete</a>
                   <a href="/asignaturas/editar_asignaturas/<%= asignaturas[i]._id %>" class="btn btn-secondary">Edit</a>
                 </td>
                 <% } %>
@@ -76,4 +77,15 @@
       </div>
     </div>
   </div>
+
+  <script>
+    function pop_up(ruta) {
+      var elemento = document.getElementById("eliminar");
+      if (confirm("¿Estas seguro de que quieres eliminar?")) {
+        elemento.setAttribute("href","/asignaturas/editar_asignaturas/"+ruta);
+      } else {
+        elemento.setAttribute("href","/asignaturas");
+      }
+    }
+  </script>
 <% include partials/_footer %>
