Intento de hacer que añadir software funcione

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
@@ -19,7 +19,7 @@
                       <%if(user){%>
                       <li><a href="/info_usuarios">Mi usuario</a></li>
                       <%}%>
-                      <li><a href="/">Cerrar sesion</a></li>
+                      <li><a href="/logout">Cerrar sesion</a></li>
                     </div>
                     <%}%>
                 </ul>
