--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
@@ -20,6 +20,9 @@
                         <div class="form-group">
                             <input class="form-control" type="text" name="correo" placeholder="Correo" value="<%= usuario.correo %>">
                         </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="imagen" placeholder="Introduce una url con foto" value="<%= usuario.imagen %>">
+                        </div>
                         <div>
                             <label>Rol: </label>
                             <select name="rol">
