--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -26,7 +26,11 @@
             <div class="form-group">
               <input class="form-control" type="text" name="password" placeholder="Contraseña">
             </div>
+            <div class="form-group">
+              <input class="form-control" type="text" name="imagen" placeholder="Introduce una url con foto">
+            </div>
             <div>
+              <label>Rol:</label>
               <select name="rol">
                 <option>Administrador</option>
                 <option>Profesor</option>
