--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
@@ -21,7 +21,7 @@
                             <input class="form-control" type="text" name="correo" placeholder="Correo" value="<%= usuario.correo %>">
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" name="imagen" placeholder="Introduce una url con foto" value="<%= usuario.imagen %>">
+                            <input class="form-control" type="text" name="imagen_perfil" placeholder="Introduce una url con foto" value="<%= usuario.imagen_perfil %>">
                         </div>
                         <div>
                             <label>Rol: </label>
