--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/info_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/info_usuarios.ejs
@@ -11,7 +11,7 @@
 <div class="container rounded bg-white mt-5 mb-5">
     <div class="row">
         <div class="col-md-3 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="<%= user.imagen %>"> </span></div>
+            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="<%= user.imagen_perfil %>"> </span></div>
         </div>
         <div class="col-md-5 border-right">
          
