En mi perfil editar usuarios ya funciona

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/info_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/info_usuarios.ejs
@@ -11,7 +11,7 @@
 <div class="container rounded bg-white mt-5 mb-5">
     <div class="row">
         <div class="col-md-3 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="<%= user.imagen_perfil %>"> </span></div>
+            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-15" width="150px" height="150px"  src="<%= user.imagen_perfil %>"> </span></div>
         </div>
         <div class="col-md-5 border-right">
          
@@ -30,7 +30,9 @@
                 </div>
                 
 
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button"> Editar Informacion</button></div>
+                <div class="mt-5 text-center">
+                    <a class="btn btn-primary profile-button" href="/usuarios/editar_usuarios/<%= user._id %>" type="button"> Editar Informacion</a>
+                </div>
             </div>
         
         </div>
