--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
@@ -23,6 +23,13 @@
                         <div class="form-group">
                             <input class="form-control" type="text" name="imagen_perfil" placeholder="Introduce una url con foto" value="<%= usuario.imagen_perfil %>">
                         </div>
+
+                        <%if(usuario.correo.toString()==user.correo.toString()){%>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="password" placeholder="Introduce una nueva contraseña">
+                        </div>
+                        <% } %>
+
                         <div>
                             <label>Rol: </label>
                             <select name="rol">
